--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,2 +1,7 @@
-<!--pages/mine/mine.wxml-->
-<text>pages/mine/mine.wxml</text>
+ <view >
+  <button  class="hide{{showView?'show':''}}" bindtap="onChangeShowState">{{showView?'隐藏':'显示'}}</button>
+  <button class="hide{{showView?'':'show'}}" bindtap="onChangeShowState">{{showView?'隐藏':'显示'}}</button>
+ </view>
+ <view class="hide{{showView?'show':''}}">
+ <text class="text">我是被显示被隐藏控件</text>
+ </view>
