--- a/pages/meeting/meeting.wxml
+++ b/pages/meeting/meeting.wxml
@@ -1,100 +1,4 @@
 <view class="all-content">
-
- <view class='nav'>
- <view  class="img hide{{showView?'show':''}}" bindtap="onChangeShowState"><image src='img/u3885.png'></image></view>
-  <view  class="img hide{{showView?'':'show'}}" bindtap="onChangeShowState"><image src='img/u3885.png'></image></view>
-     <scroll-view  class="swiper-tab" scroll-x="true">
-      <view wx:for="{{nav}}"  class="bre swiper-tab-list {{item.tab==tab? 'on' : ''}}" data-current="{{item.tab}}" bindtap="tab_click" >{{item.text}}</view>  
-   </scroll-view>
-  </view> 
-   <swiper current="{{tab}}" class="swiper-box" duration="300" style="height:673rpx" bindchange="tab_slide">
-    <swiper-item>
-       <view class='share'>
-     <view class='shares-content'>
-          <view class="share-grids">
-            <view class="share-grid" wx:for="{{share}}" wx:key="name">
-                    <view class='weui-grid__bg'>
-                        <view class="share_icon">
-                            <image src=" {{item.icon}}" mode="scaleToFill" />
-                        </view>
-                        <view style='border-bottom:#C9C9C9 solid 1px;' class='clear aaa'>
-                          <button class="share_name">{{item.name}} </button>
-                          <text class='share-content'>{{item.share_content}}</text>
-                        </view>
-                        <view class='share-xia'>
-                            <text class="share-kuchun">库存{{item.code}}片</text>
-                            <text class="validity">有效期：{{item.validity}}</text>
-                        </view>
-                    </view>
-              </view>
-    </view>
-      </view>
-  
-  
-</view>
-    </swiper-item>
- 
-    <swiper-item>
-       <view class='share'>
-     <view class='shares-content'>
-          <view class="share-grids">
-            <view class="share-grid" wx:for="{{share}}" wx:key="name">
-                    <view class='weui-grid__bg'>
-                        <view class="share_icon">
-                            <image src=" {{item.icon}}" mode="scaleToFill" />
-                        </view>
-                        <view style='border-bottom:#C9C9C9 solid 1px;' class='clear aaa'>
-                          <button class="share_name">{{item.name}} </button>
-                          <text class='hot'>{{item.hot}}</text>
-                          <text class='classification'>{{item.classification}}</text>
-                          <text class='share-content'>{{item.share_content}}</text>
-                        </view>
-                        <view class='share-xia'>
-                            <text class="share-kuchun">库存{{item.code}}片</text>
-                            <text class="validity">有效期：{{item.validity}}</text>
-                        </view>
-                    </view>
-              </view>
-    </view>
-      </view>
-</view>
-    </swiper-item>
-     <swiper-item>
-       <view class='share'>
-     <view class='shares-content'>
-          <view class="share-grids">
-            <view class="share-grid" wx:for="{{share}}" wx:key="name">
-                    <view class='weui-grid__bg'>
-                        <view class="share_icon">
-                            <image src=" {{item.icon}}" mode="scaleToFill" />
-                        </view>
-                        <view style='border-bottom:#C9C9C9 solid 1px;' class='clear aaa'>
-                          <button class="share_name">{{item.name}} </button>
-                          <text class='hot'>{{item.hot}}</text>
-                          <text class='classification'>{{item.classification}}</text>
-                          <text class='share-content'>{{item.share_content}}</text>
-                        </view>
-                        <view class='share-xia'>
-                            <text class="share-kuchun">库存{{item.code}}片</text>
-                            <text class="validity">有效期：{{item.validity}}</text>
-                        </view>
-                    </view>
-              </view>
-    </view>
-      </view>
-  
-  
-</view>
-    </swiper-item>
-  </swiper>
-  <view class="mask hide{{showView?'':'show'}}" >
-        <view class='all_seach'>
-          <text class='all_seach_text'  bindtap="onChangeShowState">全部 </text>         
-        </view>
-        <view class='other_seach'>
-            <view class='seach_list' wx:for="{{seach_list}}" >
-                <text class='seach_text'  bindtap="onChangeShowState"> {{item}}</text> 
-            </view>
-        </view>
-  </view>
+    <my-component tab="{{tab}}" nav="{{nav}}" share="{{share}}" seach_list="{{seach_list}}">
+  </my-component>
   </view> 
