--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,4 +1,8 @@
 /* my.wxss */
+image{
+  width: 100%;
+  height: 100%;
+}
 .userinfo {
   display: flex;
   flex-direction: column;
@@ -18,7 +22,7 @@
 }
 .information{
   display: flex;
-  height: 360rpx;
+  height: 245rpx;
   background: #93291E;
 }
 .username{
@@ -32,6 +36,7 @@
   margin: 0 auto;
 }
 .information{
+  align-items:center;
   color: #fff;
 }
 .phone_num{
@@ -40,4 +45,88 @@
 .information .list{
   flex: 1;
   text-align: center;
+}
+.bg1{
+  width: 750rpx;
+  z-index: 999;
+  height: 125rpx;
+  margin-top: -27rpx;
+  background: url(http://teahouse.siring.com.cn/upload/20181115/a7be6b19771d831c4edb0d75032f6daa.png) no-repeat;
+  background-size: 100% 100%;
+
+}
+.order{
+  background: #fff;
+}
+.order_title{
+  padding: 20rpx;
+  font-size: 36rpx;
+  font-weight: bold;
+}
+
+.nav_img{
+  width: 70rpx;
+  height: 70rpx;
+  margin: 0 auto;
+}
+.order_content{
+  width: 94%;
+  margin: 0 auto;
+  height: 150rpx;
+  display: flex;
+  font-size: 20rpx;
+  align-items:center;
+   padding-top:20rpx;
+   border-top: 1px solid #F6F6F9;  
+
+}
+.nav_list{
+  flex:1;
+  text-align: center;
+  flex-basis:20%;
+  align-items: center;
+  color: #797979;
+}
+.list-ico{
+  width: 50rpx;
+  height: 50rpx;
+  margin-right: 20rpx;
+}
+.list-content{
+  margin-top: 20rpx;
+  background: #fff;
+}
+.ifor_list{
+  width: 638rpx;
+  height: 110rpx;
+  margin: 0 auto;
+  display: flex;
+  justify-content:space-between;
+  align-items:center;
+  border-bottom: solid 1px  #F6F6F9;
+  font-size: 30rpx;
+  color: #797979;
+}
+.left{
+  display: flex;
+}
+.list-text{
+  vertical-align: -10rpx;
+}
+.bd_img{
+  width: 60rpx;
+  height: 60rpx;
+  margin: 0 auto
+}
+.huiyuan{
+  width: 200rpx;
+  height: 40rpx;
+  font-size: 30rpx;
+  background: #fff;
+  color: #CBAA00;
+  text-align: center;
+  margin: 0 auto;
+  line-height: 40rpx;
+  border-radius:20rpx; 
+  font-weight: bold;
 }
