--- a/pages/circle/circle.wxml
+++ b/pages/circle/circle.wxml
@@ -2,11 +2,11 @@
 <view class='content'>
  <view class='nav-list clear'>
         <view class='list list-one' wx:for="{{ico}}">
-        <navigator url="{{item.ico_url}}">  
+        <navigator url="">  
             <view class='ico'>
-               <image src='{{item.nav_ico}}'></image>
+               <image src='{{url}}{{item.icon_image}}'></image>
             </view>
-            <text class='text'>{{item.ico_text}}</text>
+            <text class='text'>{{item.name}}</text>
             </navigator>
         </view>
          
