--- a/pages/members/members.wxml
+++ b/pages/members/members.wxml
@@ -39,17 +39,17 @@
      <view class='content_list' wx:for="{{level}}"> 
         <view>
           <radio value="{{item.tab}}" checked="{{item.checked}}"  color='#fff'/>
-          <text class='radio_text'>{{item.name}}</text>
+          <text class='radio_text'>{{item.member_grade_name}}</text>
         </view>
         <view >
-        <view class='level_img'> <image src='{{item.photo}}'></image></view>
+        <view class='level_img'> <image src='{{item.member_grade_img}}'></image></view>
       
         </view>
         <view>
-        <text>{{item.time}}个月</text>
+        <text>{{item.member_finite_period}}个年</text>
         </view>
         <view>
-        <text>{{iten.monly}}万/年</text>
+        <text>{{iten.first_year_pay_full}}万/年</text>
         </view>
      </view>
       </radio-group>
