--- a/pages/members/members.wxss
+++ b/pages/members/members.wxss
@@ -32,7 +32,8 @@ radio .wx-radio-input{
   height: 320rpx;
   margin: 0 auto;
   border-radius: 20rpx;
-box-sizing: border-box
+box-sizing: border-box;
+background: 
 }
 image{
   width: 100%;
