--- a/pages/meeting/meeting.wxml
+++ b/pages/meeting/meeting.wxml
@@ -4,7 +4,7 @@
  <view  class="img hide{{showView?'show':''}}" bindtap="onChangeShowState"><image src='img/u3885.png'></image></view>
   <view  class="img hide{{showView?'':'show'}}" bindtap="onChangeShowState"><image src='img/u3885.png'></image></view>
      <scroll-view  class="swiper-tab" scroll-x="true">
-      <view wx:for="{{nav}}"  class="bre swiper-tab-list {{item.tab==tab? 'on' : ''}}" data-current="{{item.tab}}" bindtap="tab_click" >{{item.text}}</view>  
+      <view wx:for="{{nav}}"  class="bre swiper-tab-list {{item.tab==tab? 'on' : ''}}" data-current="{{item.tab}}" bindtap="tab_click" >{{item.name}}</view>  
    </scroll-view>
   </view> 
    <swiper current="{{tab}}" class="swiper-box" duration="300" bindchange="tab_slide"  bindchange="tab_slide" style="height:{{winHeight}}px">
