--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -32,6 +32,7 @@ text{
 .list_contents{
   width: 94%;
   margin: 16rpx auto;
+
 }
 .ico_img{
   display: inline-block;
@@ -45,19 +46,18 @@ height: 38rpx;
   width: 600rpx;
   font-size: 24rpx;
   color: #169BD5;
+  text-overflow: ellipsis;
+display: -webkit-box;
+-webkit-line-clamp: 2;
+overflow:hidden;
+-webkit-box-orient: vertical;
 }
 .list{
   margin-bottom: 20rpx;
+  display: flex;
+  align-items: center;
 }
-.lista_content{
-  vertical-align: 10px;
-}
-.listb_content{
-  vertical-align: 10rpx;
-}
-.listc_content{
-  vertical-align: 10rpx;
-}
+
 .listc_content text{
 margin-right: 20rpx;
 }
@@ -176,10 +176,13 @@ padding-bottom: 10rpx;
   height: 50rpx;
 }
 .monly{
-  color: #CF3A0E;
-  margin-left: 20rpx;
-  font-size: 36rpx;
-  font-weight: bold;
+ color:#CF3A0E;
+margin-left:20rpx;
+font-size:36rpx;
+font-weight:bold;
+width:129rpx;
+overflow:hidden;
+
 }
 .buttons{
 width: 170rpx;
