--- a/pages/members/members.wxss
+++ b/pages/members/members.wxss
@@ -51,7 +51,10 @@ image{
   height: 88rpx;
   background: #fff;
   border-radius:50%;
-  overflow: hidden; 
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
 }
 .code{
   width: 110rpx;
@@ -130,6 +133,7 @@ align-items: center;
   width: 60rpx;
   height: 60rpx;
   margin: 0 auto;
+  overflow: hidden;
 }
 .radio_text{
   margin-left: 20rpx;
@@ -177,4 +181,6 @@ height: 50rpx;
 }
 .radio{
   text-align: left !important;
+  display: flex;
+  align-items: center;
 }
