--- a/pages/circle/circle.wxss
+++ b/pages/circle/circle.wxss
@@ -8,10 +8,12 @@ image{
   background: #F9F9F9;
 }
 .nav-list{
+  width: 750rpx;
   background: #fff;
-  height: 90rpx;
-  padding-top: 30rpx;
-  padding-bottom: 30rpx;
+  height: 110rpx;
+  display: flex;
+  position: fixed;
+  z-index: 999;
   
  
 }
@@ -20,9 +22,12 @@ image{
    color: #333;
 }
 .list{
-  text-align: center;
-  float: left;
-  width: 20%;
+height:100rpx;
+text-align:center;
+flex:1;
+overflow:hidden;
+padding-top:10rpx;
+
 
 }
 
@@ -41,10 +46,13 @@ image{
 .selling_point{
   margin-left:13rpx; 
 }
-
+.share{
+  margin-top: 110rpx;
+}
 .share_icon{
    width: 100%;
     height: 346rpx;
+
    
 }
 .share-grid{
@@ -129,7 +137,7 @@ padding: 10rpx;
   overflow: hidden;
   margin: 15rpx auto;
   background: #fff;
-   box-shadow: 0rpx 6rpx #E5E5E5;
+  box-shadow: 0rpx 6rpx #E5E5E5;
 }
 .share_icon {
   overflow: hidden;
