--- a/pages/meeting/meeting.wxss
+++ b/pages/meeting/meeting.wxss
@@ -20,11 +20,14 @@ image{
 
 }
 .nav{
-  width: 100%;
-  height: 86rpx;
-  background: #fff;
-  position: fixed;
-  z-index: 999;
+      width:100%;
+      height:86rpx;
+      background:#fff;
+      position:fixed;
+      z-index:999;
+      display:flex;
+      align-items: center;
+
 }
 .img{
 width:46rpx;
@@ -42,16 +45,22 @@ padding: 28rpx
   border-radius:20rpx; 
    box-shadow: 0rpx 6rpx #E5E5E5;
 }
+.right{
+  width:17rpx;
+height:38rpx;
+float: right;
+
+}
 .swiper-tab{  
-    width: 81.3%;  
+    width: 83%;  
     border-bottom: 2rpx solid #eee;  
     text-align: center;  
     line-height: 80rpx;
     background: #fff;
     font-size: 14px;
-    float: right;
+    float: left;
     height: 84rpx;
-   white-space:nowrap;
+    white-space:nowrap;
     box-sizing: border-box;
 }  
 .on{ 
