--- a/utils/template.wxml
+++ b/utils/template.wxml
@@ -1,16 +1,17 @@
 <template name="joy-pic">
   <view class='weui-grid__bg' bindtap="bindViewTap" id="{{item.id}}">
         <view class="share_icon">
-            <!-- <image src=" http://localhost/teahouse/public/uploads/{{item.classify_image}}" mode="scaleToFill" /> -->
              <image src="{{item.url}}{{item.classify_image}}" mode="scaleToFill" />
            
         </view>
         <view style='border-bottom:#C9C9C9 solid 1px;' class='clear aaa'>
-          <button class="share_name">{{item.named}} </button>
+        <view>
+          <button class="share_name" style='background:{{item.color}}'>{{item.named}} </button>
+          </view>
           <text class='share-content'>{{item.activity_name}}</text>
         </view>
         <view class='share-xia'>
-            <text class="share-kuchun">{{item.names}}</text>
+            <text class="share-kuchun" style='color:{{item.color}}'>{{item.names}}</text>
             <text class="validity">日期：{{item.start_time}}</text>
         </view>
     </view>
