--- a/app.wxss
+++ b/app.wxss
@@ -21,4 +21,15 @@ margin:10rpx;
 .share-content{
   width: 600rpx;
 }
+image {
+width:100%;
+height:100%;
+display:inline-block;
+overflow:hidden;
+
+}
+.price_cont{
+  display: flex;
+  align-items: center;
+}
 
